--- a/Assignments/Assignment 1/190997.ipynb
+++ b/Assignments/Assignment 1/190997.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0399a26a",
+   "id": "45201082",
    "metadata": {},
    "source": [
     "# Assignment 1"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a18189a2",
+   "id": "22fd4049",
    "metadata": {},
    "source": [
     "## Q1. "
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4d9081a4",
+   "id": "731ee326",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc59d260",
+   "id": "958f43c0",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dd5029bc",
+   "id": "2d5ad07f",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3260817c",
+   "id": "814a9402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "255b9688",
+   "id": "b317aeeb",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "31b14246",
+   "id": "67d72769",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0d3e6f0",
+   "id": "eb9e613b",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b8a46a18",
+   "id": "94532792",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "80765082",
+   "id": "b31dc5e1",
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7cb6ea54",
+   "id": "b3787464",
    "metadata": {},
    "outputs": [
     {
@@ -1644,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "af25343c",
+   "id": "f0cda192",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0c1bc565",
+   "id": "1124181e",
    "metadata": {},
    "outputs": [
     {
@@ -2077,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b53cdcba",
+   "id": "45f93cc2",
    "metadata": {
     "scrolled": false
    },
@@ -2467,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e6b203c8",
+   "id": "90048a7e",
    "metadata": {
     "scrolled": false
    },
@@ -2855,7 +2855,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6d317d87",
+   "id": "08b8e2b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,7 +2867,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7f6e6af0",
+   "id": "3b1ae031",
    "metadata": {
     "scrolled": false
    },
@@ -3254,7 +3254,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bc31a51f",
+   "id": "69197ef4",
    "metadata": {
     "scrolled": true
    },
@@ -4453,7 +4453,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4af98ea3",
+   "id": "66634446",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4466,7 +4466,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f064513a",
+   "id": "b3819907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4482,7 +4482,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0f7049cb",
+   "id": "c3bfaa85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4503,7 +4503,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e2fcd833",
+   "id": "62ec0884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4513,7 +4513,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9fd09c35",
+   "id": "4b9acf7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4525,7 +4525,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d8199c9",
+   "id": "db6cae05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4537,7 +4537,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c0d6d9c3",
+   "id": "7b4e2f8e",
    "metadata": {
     "scrolled": true
    },
@@ -4560,7 +4560,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b1f1a670",
+   "id": "d5c05d3d",
    "metadata": {},
    "outputs": [
     {
@@ -4582,7 +4582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ffbc925",
+   "id": "9a12f1ff",
    "metadata": {},
    "source": [
     "## Q2. "
@@ -4591,7 +4591,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "45633cc1",
+   "id": "c0d9f595",
    "metadata": {},
    "outputs": [
     {
@@ -4627,7 +4627,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "33e0cfa5",
+   "id": "d83b2c73",
    "metadata": {},
    "outputs": [
     {
@@ -4928,7 +4928,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "131b6d0c",
+   "id": "05ffc144",
    "metadata": {},
    "outputs": [
     {
@@ -5229,7 +5229,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a19c349a",
+   "id": "bae34681",
    "metadata": {},
    "outputs": [
     {
@@ -5265,7 +5265,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ebf29df7",
+   "id": "c1d7774c",
    "metadata": {},
    "outputs": [
     {
@@ -5566,7 +5566,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fc0eaab8",
+   "id": "29575e50",
    "metadata": {},
    "outputs": [
     {
@@ -5602,7 +5602,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3a26555c",
+   "id": "099fbd51",
    "metadata": {
     "scrolled": false
    },
@@ -5906,7 +5906,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b2b92ec8",
+   "id": "21af71f4",
    "metadata": {},
    "outputs": [
     {
@@ -5942,7 +5942,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0be18589",
+   "id": "63db0e8f",
    "metadata": {},
    "outputs": [
     {
@@ -6094,7 +6094,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5ae3bb07",
+   "id": "5c04dd1f",
    "metadata": {},
    "outputs": [
     {
@@ -6397,7 +6397,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5a0aafb3",
+   "id": "31cb6676",
    "metadata": {},
    "outputs": [
     {
@@ -6433,7 +6433,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "70effe47",
+   "id": "c04f60d5",
    "metadata": {
     "scrolled": false
    },
@@ -6736,7 +6736,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "184b75f9",
+   "id": "758601ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6748,7 +6748,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "eaa2bc33",
+   "id": "a35ba131",
    "metadata": {
     "scrolled": false
    },
@@ -7050,7 +7050,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bff51297",
+   "id": "b80339a4",
    "metadata": {
     "scrolled": false
    },
@@ -7352,7 +7352,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e9c42069",
+   "id": "e944c822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7365,7 +7365,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9a3fee7b",
+   "id": "e4b1e928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7456,7 +7456,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e5cc8ef4",
+   "id": "416235de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7476,7 +7476,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9217f712",
+   "id": "ef57f630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7487,7 +7487,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "52c64d2a",
+   "id": "8c4ac359",
    "metadata": {},
    "outputs": [
     {
@@ -7520,7 +7520,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7d812fc0",
+   "id": "5fed6cd7",
    "metadata": {},
    "outputs": [
     {
@@ -7536,6 +7536,55 @@
    ],
    "source": [
     "(y_pred == y_test).sum() / len(y_test) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "eee86b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test2(maxLeafSize, maxDepth):\n",
+    "    tree = Tree(maxLeafSize, maxDepth)\n",
+    "    tree.train(np.array(X_train), np.array(y_train))\n",
+    "    y_pred = X_test.apply(tree.predict, axis=1)\n",
+    "    accuracy = (y_pred == y_test).sum() / len(y_test) * 100\n",
+    "    print(f'For max leaf size = {maxLeafSize} and max depth = {maxDepth}, accuracy = {round(accuracy, 2)}%')\n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0228d1bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For max leaf size = 15 and max depth = 3, accuracy = 78.24%\n",
+      "For max leaf size = 10 and max depth = 3, accuracy = 78.24%\n",
+      "For max leaf size = 5 and max depth = 3, accuracy = 78.24%\n",
+      "For max leaf size = 15 and max depth = 4, accuracy = 78.7%\n",
+      "For max leaf size = 10 and max depth = 4, accuracy = 78.7%\n",
+      "For max leaf size = 5 and max depth = 4, accuracy = 78.7%\n",
+      "For max leaf size = 15 and max depth = 5, accuracy = 83.04%\n",
+      "For max leaf size = 10 and max depth = 5, accuracy = 83.04%\n",
+      "For max leaf size = 5 and max depth = 5, accuracy = 83.04%\n",
+      "For max leaf size = 15 and max depth = 6, accuracy = 82.89%\n",
+      "For max leaf size = 10 and max depth = 6, accuracy = 82.89%\n",
+      "For max leaf size = 5 and max depth = 6, accuracy = 82.91%\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_accuracy = 0\n",
+    "for maxDepth in range(3, 7):\n",
+    "    for maxLeafSize in range(15, 0, -5):\n",
+    "        accuracy = test2(maxLeafSize, maxDepth)\n",
+    "        max_accuracy = max(accuracy, max_accuracy)"
    ]
   }
  ],
