--- a/Assignments/Assignment 1/190997.ipynb
+++ b/Assignments/Assignment 1/190997.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4013894",
+   "id": "8bedceb7",
    "metadata": {},
    "source": [
-    "# Assignment 1"
+    "# CS771A Assignment 1\n",
+    "\\- Yash Gupta (190997)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b1fa247",
+   "id": "fe67dfce",
    "metadata": {},
    "source": [
-    "## Q1. "
+    "## Q1. The automobile dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39c4acd0",
+   "id": "41b8fd79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "30d592be",
+   "id": "1f4b4cf3",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a8c92b95",
+   "id": "4e0a1b0c",
    "metadata": {},
    "outputs": [
     {
@@ -466,10 +467,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb767105",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30fbe36c",
+   "metadata": {},
+   "source": [
+    "### Analysing missing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6125d978",
-   "metadata": {},
+   "id": "ac2c66e0",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -855,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b472d95f",
+   "id": "269f7706",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2cda5706",
+   "id": "72c1277c",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3e9393ef",
+   "id": "2147266f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed2efa5a",
+   "id": "8596366c",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "defac7e8",
+   "id": "f2a1d3e5",
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0747f179",
+   "id": "a77303d6",
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "13791996",
+   "id": "cfe0002b",
    "metadata": {},
    "outputs": [
     {
@@ -2172,9 +2191,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac9a6e06",
+   "metadata": {},
+   "source": [
+    "### Feature scaling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "765d5b5c",
+   "id": "998a5f0c",
    "metadata": {
     "scrolled": false
    },
@@ -2562,9 +2589,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9a732ff",
+   "metadata": {},
+   "source": [
+    "### Train-test split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3f74d9e5",
+   "id": "abcfdbcd",
    "metadata": {
     "scrolled": false
    },
@@ -2953,7 +2988,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aebb1e82",
+   "id": "f1541422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2966,7 +3001,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "22df9a56",
+   "id": "79a67c14",
    "metadata": {
     "scrolled": false
    },
@@ -2989,7 +3024,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d276d954",
+   "id": "246c34e6",
    "metadata": {
     "scrolled": true
    },
@@ -3012,7 +3047,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ddde6e1d",
+   "id": "9122ae01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3025,16 +3060,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "053ad900",
+   "id": "4cf4c9ec",
    "metadata": {},
    "source": [
-    "### (a)"
+    "## Q1. (a)\n",
+    "Train a k-nearest neighbors regression model, and report its validation set performance using root mean squared error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "495e38dd",
+   "metadata": {},
+   "source": [
+    "## The model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b4f4caa2",
+   "id": "8b2487ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3060,7 +3104,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "67fc2ad7",
+   "id": "e3740a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3072,7 +3116,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ba51cd7a",
+   "id": "635441fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3083,9 +3127,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c1cb1c6",
+   "metadata": {},
+   "source": [
+    "### Training the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ec63cd32",
+   "id": "263393dc",
    "metadata": {
     "scrolled": true
    },
@@ -3108,16 +3160,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb63f11",
+   "id": "91f14851",
    "metadata": {},
    "source": [
-    "### (b)"
+    "The root mean squared error for the k-nearest neighbours regression model on the validation set is 6004.16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "536ff29d",
+   "metadata": {},
+   "source": [
+    "## Q1. (b)\n",
+    "Find an optimal k for this model using cross-validation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54159f1b",
+   "metadata": {},
+   "source": [
+    "### Optimizing the hyperparameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b837eb8b",
+   "id": "9fa3a721",
    "metadata": {
     "scrolled": false
    },
@@ -3158,16 +3227,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7254338b",
+   "id": "26410855",
    "metadata": {},
    "source": [
-    "## Q2. "
+    "The optimal k found for the model using cross validation is 5. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eace37d",
+   "metadata": {},
+   "source": [
+    "## Q2. The census income dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "02beedcf",
+   "id": "b8b8605d",
    "metadata": {},
    "outputs": [
     {
@@ -3204,7 +3281,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d2b89b71",
+   "id": "5fbd04bb",
    "metadata": {},
    "outputs": [
     {
@@ -3504,9 +3581,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fced8aac",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfdea794",
+   "metadata": {},
+   "source": [
+    "### Analysing missing data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0ba54374",
+   "id": "cc53464f",
    "metadata": {},
    "outputs": [
     {
@@ -3808,7 +3901,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "66c901d8",
+   "id": "c75d69dd",
    "metadata": {},
    "outputs": [
     {
@@ -3845,7 +3938,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6bf70b49",
+   "id": "fff12618",
    "metadata": {},
    "outputs": [
     {
@@ -4147,7 +4240,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0cbfe4d1",
+   "id": "417ebd38",
    "metadata": {
     "scrolled": false
    },
@@ -4452,7 +4545,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e5a0857d",
+   "id": "f465ecab",
    "metadata": {},
    "outputs": [
     {
@@ -4487,9 +4580,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc41a5bc",
+   "metadata": {},
+   "source": [
+    "### Label encoding the categorical variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "eead46a4",
+   "id": "778d4f0f",
    "metadata": {},
    "outputs": [
     {
@@ -4791,9 +4892,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d027654e",
+   "metadata": {},
+   "source": [
+    "### Train-test split"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eb64849e",
+   "id": "96225b34",
    "metadata": {
     "scrolled": false
    },
@@ -5097,7 +5206,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "182552b8",
+   "id": "28807f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5110,7 +5219,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "bea79bba",
+   "id": "104585d2",
    "metadata": {
     "scrolled": false
    },
@@ -5133,7 +5242,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "56aef266",
+   "id": "b071efa0",
    "metadata": {
     "scrolled": false
    },
@@ -5156,7 +5265,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "961de787",
+   "id": "eceb33ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5169,16 +5278,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d93da87",
+   "id": "7ed0491b",
    "metadata": {},
    "source": [
-    "### (a)"
+    "## Q2. (a)\n",
+    "Train a decision tree classification model using information gain as the splitting criterion and using only single feature decision stumps at all non-leaf nodes and majority votes at leaf nodes, and report its validation set performance using % accuracy. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34c93faa",
+   "metadata": {},
+   "source": [
+    "## The model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "617ed2c4",
+   "id": "8fa0ab11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5217,6 +5335,7 @@
     "            \n",
     "    def getStump(self, X, y):\n",
     "        n = y.size\n",
+    "        # Number of positive and negative labels at this node\n",
     "        nPos = (y == 1).sum()\n",
     "        nNeg = (y == -1).sum()\n",
     "        bestObjective = -float('inf')\n",
@@ -5267,7 +5386,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "caa878c5",
+   "id": "44d30531",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5287,7 +5406,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6231e0e2",
+   "id": "2164a7e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5301,7 +5420,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d6853e46",
+   "id": "666b2dff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5312,9 +5431,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09a580ca",
+   "metadata": {},
+   "source": [
+    "### Training the model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "54384b82",
+   "id": "a24ab167",
    "metadata": {},
    "outputs": [
     {
@@ -5336,16 +5463,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "854cc619",
+   "id": "95a408f0",
    "metadata": {},
    "source": [
-    "### (b)"
+    "The accuracy of the decision tree classification model on the validation set is 83.04%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70d7ee25",
+   "metadata": {},
+   "source": [
+    "## Q2. (b)\n",
+    "Use cross-validation to optimize the tree hyperparameters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4f922f1",
+   "metadata": {},
+   "source": [
+    "### Optimizing the hyperparameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c11a6fe3",
+   "id": "f4a4fb16",
    "metadata": {},
    "outputs": [
     {
@@ -5387,6 +5531,16 @@
     "print()\n",
     "print(f'Optimal value of maxLeafSize: {maxLeafSizeOpt}')\n",
     "print(f'Optimal value of maxDepth: {maxDepthOpt}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0013fe0",
+   "metadata": {},
+   "source": [
+    "The optimal values of the tree hyperparameters found using cross validation are:\n",
+    "- Maximum leaf size: 10\n",
+    "- Maximum depth of the tree: 5"
    ]
   }
  ],
