--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -268,6 +268,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "![Bayesian Network](bayesian_network.png \"Bayesian Network\")"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Q2. (i)\n",
     "Calculate the probability that someone has both cold and a fever"
    ],
@@ -276,8 +283,28 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Let $C$ represent cold and $F$ represent fever. So, we need to find $P(C \\cap F)$. \n",
+    "$$ P(C \\cap F) = P(F | C) P(C) = 0.307 \\times 0.02 = 0.00614 $$\n",
+    "Hence, the probability that someone has both cold and a fever is 0.00614"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Q2. (ii)\n",
-    "Calculate the probability that someone has both cold and a fever"
+    "Calculate the probability that someone who has a cough has a cold"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Let $X$ represent cough, $C$ represent cold and $L$ represent lung disease. So, we need to find $P(C | X)$. \n",
+    "$$ P(C | X) = \\frac{P(X | C) P(C)}{P(X)} $$\n",
+    "Now, $$ P(X | C) = P \\bigl( X | (C \\cap L) \\bigr) + P \\bigl( X | (C \\cap \\overline{L}) \\bigr) = 0.7525 + 0.505 = 1.2575 $$\n",
+    "and $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) = 0.7525 + 0.505 + 0.505 + 0.01 = 1.7725 $$\n",
+    "Hence, $$ P(C | X) = \\frac{1.2575 \\times 0.02}{1.7725} = 0.01418899858 $$"
    ],
    "metadata": {}
   },
