--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "source": [
     "# importing libraries\n",
     "import numpy as np\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "source": [
     "# defining the gradient descent function\n",
     "def gradient_descent(gradient, init_, learn_rate, n_iter=50, tol=1e-06):\n",
@@ -159,10 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "source": [
     "def gradient_lr(params):\n",
-    "    grad = np.array([0, 0])\n",
+    "    grad = np.array([0.0, 0.0])\n",
     "    for Xn, yn, in zip(X, y): # X is the features and y is the labels both of which will be global variables\n",
     "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
     "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
@@ -181,12 +181,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "source": [
     "np.random.seed(0)\n",
     "X = 2.5 * np.random.randn(10000) + 1.5 # array of 100 values with mean = 1.5, stddev = 2.5\n",
     "res = 1.5 * np.random.randn(10000) # generate 100 residual terms\n",
     "y = 2 + 0.3 * X + res # actual values of y"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now, we need to make a small modification in the gradient_descent() function defined earlier to support multivariate gradient descent. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "source": [
+    "# defining the gradient descent function\n",
+    "def gradient_descent_multivariate(gradient, init_, learn_rate, n_iter=50, tol=1e-06):\n",
+    "    x = init_\n",
+    "    for _ in range(n_iter):\n",
+    "        delta = -learn_rate * gradient(x)\n",
+    "        if np.all(np.abs(delta) <= tol):\n",
+    "            break\n",
+    "        x += delta\n",
+    "    return np.round(x, 3) # Use np.round() instead of round() to round a numpy array"
    ],
    "outputs": [],
    "metadata": {}
@@ -200,23 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "source": [
-    "params_init = np.array([0, 0])\n",
-    "params = gradient_descent(gradient_lr, init_=params_init, learn_rate=0.2)"
+    "params_init = np.array([0.0, 0.0])\n",
+    "params = gradient_descent_multivariate(gradient_lr, init_=params_init, learn_rate=0.2)\n",
+    "params"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "UFuncTypeError",
-     "evalue": "Cannot cast ufunc 'add' output from dtype('float64') to dtype('int64') with casting rule 'same_kind'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_823868/2384373987.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mparams_init\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradient_lr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams_init\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearn_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_823868/2401161293.py\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(gradient, init_, learn_rate, n_iter, tol)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mdelta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUFuncTypeError\u001b[0m: Cannot cast ufunc 'add' output from dtype('float64') to dtype('int64') with casting rule 'same_kind'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([-2.36058560e+226, -4.58133609e+225])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -300,11 +323,26 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let $X$ represent cough, $C$ represent cold and $L$ represent lung disease. So, we need to find $P(C | X)$. \n",
+    "Let $X$ represent cough, $C$ represent cold, $L$ represent lung disease and $S$ represent smokes. So, we need to find $P(C | X)$. \n",
     "$$ P(C | X) = \\frac{P(X | C) P(C)}{P(X)} $$\n",
-    "Now, $$ P(X | C) = P \\bigl( X | (C \\cap L) \\bigr) + P \\bigl( X | (C \\cap \\overline{L}) \\bigr) = 0.7525 + 0.505 = 1.2575 $$\n",
-    "and $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) = 0.7525 + 0.505 + 0.505 + 0.01 = 1.7725 $$\n",
-    "Hence, $$ P(C | X) = \\frac{1.2575 \\times 0.02}{1.7725} = 0.01418899858 $$"
+    "Now, $$ P(X | C) = P \\bigl( X | (C \\cap L) \\bigr) P(L | C) + P \\bigl( X | (C \\cap \\overline{L}) \\bigr) P(\\overline{L} | C) $$\n",
+    "Since C and L are independent, $P(L | C) = P(L)$ and $P(\\overline{L} | C) = P(\\overline{L})$.\n",
+    "So, $$ P(X | C) = P \\bigl( X | (C \\cap L) \\bigr) P(L) + P \\bigl( X | (C \\cap \\overline{L}) \\bigr) P(\\overline{L}) $$\n",
+    "Now, $$ P(L) = P(L | S) P(S) + P(L | \\overline{S}) P(\\overline{S}) = 0.1009 \\times 0.2 + 0.001 \\times 0.8 = 0.02098 $$\n",
+    "and $$ P(\\overline{L}) = 1 - P(L) = 1 - 0.02098 = 0.97902 $$\n",
+    "Hence, $$ P(X | C) = 0.7525 \\times 0.02098 + 0.505 \\times 0.97902 = 0.51019255 $$\n",
+    "Now, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L \\cap C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L \\cap \\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L} \\cap C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L} \\cap \\overline{C}) $$\n",
+    "Again, since L and C are independent, $P(L \\cap C) = P(L) P(C)$,  $P(L \\cap \\overline{C}) = P(L) P(\\overline{C})$, $P(\\overline{L} \\cap C) = P(\\overline{L}) P(C)$ and $P(\\overline{L} \\cap \\overline{C}) = P(\\overline{L}) P(\\overline{C})$\n",
+    "Hence, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L) P(C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L) P(\\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L}) P(C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L}) P(\\overline{C}) $$\n",
+    "$$ = 0.7525 \\times 0.02098 \\times 0.02 + 0.505 \\times 0.02098 \\times 0.98 + 0.505 \\times 0.97902 \\times 0.02 + 0.01 \\times 0.97902 \\times 0.98 = 0.030181249 $$\n",
+    "Hence, $$ P(C | X) = \\frac{0.51019255 \\times 0.02}{0.030181249} = 0.33808577637 $$"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Hence, the probability that someone who has a cough has a cold is 0.33808577637"
    ],
    "metadata": {}
   },
@@ -313,6 +351,11 @@
    "source": [
     "## Q3. Derive the MLE for the parameters of a k-sided multinomial distribution."
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {}
   }
  ],
