--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "source": [
     "# importing libraries\n",
     "import numpy as np\n",
-    "import random"
+    "import time as t"
    ],
    "outputs": [],
    "metadata": {}
@@ -184,8 +184,8 @@
    "execution_count": 18,
    "source": [
     "np.random.seed(0)\n",
-    "X = 2.5 * np.random.randn(10000) + 1.5 # array of 100 values with mean = 1.5, stddev = 2.5\n",
-    "res = 1.5 * np.random.randn(10000) # generate 100 residual terms\n",
+    "X = 2.5 * np.random.randn(10000) + 1.5 # array of 10000 values with mean = 1.5, stddev = 2.5\n",
+    "res = 1.5 * np.random.randn(10000) # generate 10000 residual terms\n",
     "y = 2 + 0.3 * X + res # actual values of y"
    ],
    "outputs": [],
@@ -224,13 +224,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "source": [
     "params_init = np.array([0.0, 0.0])\n",
+    "tic = t.process_time()\n",
     "params = gradient_descent_multivariate(gradient_lr, init_=params_init, learn_rate=0.2)\n",
+    "toc = t.process_time()\n",
+    "time_vanilla_gd = toc - tic\n",
+    "print('Time taken:', time_vanilla_gd, 'seconds')\n",
     "params"
    ],
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Time taken: 3.1711043009999997 seconds\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -239,7 +250,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 49
     }
    ],
    "metadata": {}
@@ -253,24 +264,91 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
+    "We can define the minibatch stochastic gradient descent function by creating a minibatch in every iteration of the gradient descent and passing the minibatch to the gradient function as follows:"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "# defining the minibatch stochastic gradient descent function\n",
     "def minibatch_sgd(gradient, init_, learn_rate, n_iter=50, tol=1e-06, batch_size=125):\n",
     "    x = init_\n",
-    "    n = x.shape[0]\n",
-    "    random.shuffle(x)\n",
     "    for _ in range(n_iter):\n",
-    "        for start in range(0, n, batch_size):\n",
-    "            stop = start + batch_size\n",
-    "            x_batch = x[start:stop, :-1]\n",
-    "            delta = -learn_rate * gradient(x_batch)\n",
-    "            if np.all(np.abs(delta) <= tol):\n",
-    "                break\n",
-    "            x += delta\n",
-    "    return x"
+    "        idx = np.random.choice(np.arange(len(X)), batch_size, replace=False) # indexes of the minibatch\n",
+    "        X_batch = X[idx]\n",
+    "        y_batch = y[idx]\n",
+    "        delta = -learn_rate * gradient(x, X_batch, y_batch)\n",
+    "        if np.all(np.abs(delta) <= tol):\n",
+    "            break\n",
+    "        x += delta\n",
+    "    return np.round(x, 3)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We will also need to define a gradient function which takes the minibatches as inputs as follows:"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "def gradient_lr_sgd(params, X_batch, y_batch):\n",
+    "    grad = np.array([0.0, 0.0])\n",
+    "    for Xn, yn, in zip(X_batch, y_batch):\n",
+    "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
+    "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
+    "    return grad"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Running minibatch stochastic gradient descent on the data:"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "source": [
+    "params_sgd_init = np.array([0.0, 0.0])\n",
+    "tic = t.process_time()\n",
+    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.2)\n",
+    "toc = t.process_time()\n",
+    "time_sgd = toc - tic\n",
+    "print('Time taken:', time_sgd, 'seconds')\n",
+    "params"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Time taken: 0.08994101300000068 seconds\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([-2.36058560e+226, -4.58133609e+225])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
    "metadata": {}
   },
   {
@@ -279,6 +357,98 @@
     "## Q1. (e)\n",
     "Does SGD do better or worse in terms of time performance on our data? Is there an optimal minibatch size that works best? Quantify and interpret your findings."
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Let's look at the times taken by vanilla gradient descent and minibatch SGD."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "source": [
+    "print('Time taken by vanilla gradient descent:', time_vanilla_gd)\n",
+    "print('Time taken by minibatch SGD:', time_sgd)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Time taken by vanilla gradient descent: 3.1711043009999997\n",
+      "Time taken by minibatch SGD: 0.08994101300000068\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "As we can see, minibatch SGD does much better in terms of time performance than vanilla gradient descent. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now, let's find the optimal minibatch size that works best."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "source": [
+    "params_sgd_init = np.array([0.0, 0.0])\n",
+    "min_time = float('inf')\n",
+    "opt_batch_size = 0\n",
+    "for batch_size in range(1, 1001, 125):\n",
+    "    # print('Current batch size:', batch_size)\n",
+    "    tic = t.process_time()\n",
+    "    params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.2)\n",
+    "    toc = t.process_time()\n",
+    "    time_sgd = toc - tic\n",
+    "    if time_sgd < min_time:\n",
+    "        min_time = time_sgd\n",
+    "        opt_batch_size = batch_size\n",
+    "print('The optimal minibatch size is', opt_batch_size, 'and it takes', min_time, 'seconds')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/tmp/ipykernel_823868/778860591.py:4: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
+      "/tmp/ipykernel_823868/778860591.py:5: RuntimeWarning: overflow encountered in double_scalars\n",
+      "  grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
+      "/tmp/ipykernel_823868/778860591.py:4: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
+      "/tmp/ipykernel_823868/778860591.py:5: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  grad[1] += -2 * (yn - params[0] * Xn - params[1])\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The optimal minibatch size is 251 and it takes 0.06029898100000253 seconds\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "source": [
+    "# Interpret your findings"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -332,7 +502,7 @@
     "and $$ P(\\overline{L}) = 1 - P(L) = 1 - 0.02098 = 0.97902 $$\n",
     "Hence, $$ P(X | C) = 0.7525 \\times 0.02098 + 0.505 \\times 0.97902 = 0.51019255 $$\n",
     "Now, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L \\cap C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L \\cap \\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L} \\cap C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L} \\cap \\overline{C}) $$\n",
-    "Again, since L and C are independent, $P(L \\cap C) = P(L) P(C)$,  $P(L \\cap \\overline{C}) = P(L) P(\\overline{C})$, $P(\\overline{L} \\cap C) = P(\\overline{L}) P(C)$ and $P(\\overline{L} \\cap \\overline{C}) = P(\\overline{L}) P(\\overline{C})$\n",
+    "Again, since L and C are independent, $P(L \\cap C) = P(L) P(C)$,  $P(L \\cap \\overline{C}) = P(L) P(\\overline{C})$, $P(\\overline{L} \\cap C) = P(\\overline{L}) P(C)$ and $P(\\overline{L} \\cap \\overline{C}) = P(\\overline{L}) P(\\overline{C})$ <br>\n",
     "Hence, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L) P(C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L) P(\\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L}) P(C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L}) P(\\overline{C}) $$\n",
     "$$ = 0.7525 \\times 0.02098 \\times 0.02 + 0.505 \\times 0.02098 \\times 0.98 + 0.505 \\times 0.97902 \\times 0.02 + 0.01 \\times 0.97902 \\times 0.98 = 0.030181249 $$\n",
     "Hence, $$ P(C | X) = \\frac{0.51019255 \\times 0.02}{0.030181249} = 0.33808577637 $$"
