--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "def gradient_lr(params):\n",
     "    grad = np.array([0.0, 0.0])\n",
-    "    for Xn, yn, in zip(X, y): # X is the features and y is the labels both of which will be global variables\n",
+    "    for Xn, yn in zip(X, y): # X is the features and y is the labels both of which will be global variables\n",
     "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
     "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
     "    return grad"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "source": [
     "np.random.seed(0)\n",
     "X = 2.5 * np.random.randn(10000) + 1.5 # array of 10000 values with mean = 1.5, stddev = 2.5\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "source": [
     "# defining the gradient descent function\n",
     "def gradient_descent_multivariate(gradient, init_, learn_rate, n_iter=50, tol=1e-06):\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 110,
    "source": [
     "params_init = np.array([0.0, 0.0])\n",
     "tic = t.process_time()\n",
@@ -239,7 +239,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken: 3.1711043009999997 seconds\n"
+      "Time taken: 3.0262451289999888 seconds\n"
      ]
     },
     {
@@ -250,7 +250,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 110
     }
    ],
    "metadata": {}
@@ -303,7 +303,7 @@
    "source": [
     "def gradient_lr_sgd(params, X_batch, y_batch):\n",
     "    grad = np.array([0.0, 0.0])\n",
-    "    for Xn, yn, in zip(X_batch, y_batch):\n",
+    "    for Xn, yn in zip(X_batch, y_batch):\n",
     "        grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
     "        grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
     "    return grad"
