--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "source": [
     "params_init = np.array([0.0, 0.0])\n",
     "tic = t.process_time()\n",
-    "params = gradient_descent_multivariate(gradient_lr, init_=params_init, learn_rate=0.2)\n",
+    "params = gradient_descent_multivariate(gradient_lr, init_=params_init, learn_rate=0.00001)\n",
     "toc = t.process_time()\n",
     "time_vanilla_gd = toc - tic\n",
     "print('Time taken:', time_vanilla_gd, 'seconds')\n",
@@ -239,18 +239,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken: 3.0262451289999888 seconds\n"
+      "Time taken: 1.044782304999984 seconds\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([-2.36058560e+226, -4.58133609e+225])"
+       "array([0.295, 2.022])"
       ]
      },
      "metadata": {},
-     "execution_count": 110
+     "execution_count": 117
     }
    ],
    "metadata": {}
@@ -320,11 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 118,
    "source": [
     "params_sgd_init = np.array([0.0, 0.0])\n",
     "tic = t.process_time()\n",
-    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.2)\n",
+    "params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.00001)\n",
     "toc = t.process_time()\n",
     "time_sgd = toc - tic\n",
     "print('Time taken:', time_sgd, 'seconds')\n",
@@ -335,18 +335,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken: 0.08994101300000068 seconds\n"
+      "Time taken: 0.032973420000018905 seconds\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([-2.36058560e+226, -4.58133609e+225])"
+       "array([0.295, 2.022])"
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 118
     }
    ],
    "metadata": {}
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 119,
    "source": [
     "print('Time taken by vanilla gradient descent:', time_vanilla_gd)\n",
     "print('Time taken by minibatch SGD:', time_sgd)"
@@ -378,8 +378,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Time taken by vanilla gradient descent: 3.1711043009999997\n",
-      "Time taken by minibatch SGD: 0.08994101300000068\n"
+      "Time taken by vanilla gradient descent: 1.044782304999984\n",
+      "Time taken by minibatch SGD: 0.032973420000018905\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 139,
    "source": [
     "params_sgd_init = np.array([0.0, 0.0])\n",
     "min_time = float('inf')\n",
@@ -409,7 +409,7 @@
     "for batch_size in range(1, 1001, 125):\n",
     "    # print('Current batch size:', batch_size)\n",
     "    tic = t.process_time()\n",
-    "    params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.2)\n",
+    "    params_sgd = minibatch_sgd(gradient_lr_sgd, init_=params_sgd_init, learn_rate=0.00001)\n",
     "    toc = t.process_time()\n",
     "    time_sgd = toc - tic\n",
     "    if time_sgd < min_time:\n",
@@ -420,23 +420,9 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/tmp/ipykernel_823868/778860591.py:4: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
-      "/tmp/ipykernel_823868/778860591.py:5: RuntimeWarning: overflow encountered in double_scalars\n",
-      "  grad[1] += -2 * (yn - params[0] * Xn - params[1])\n",
-      "/tmp/ipykernel_823868/778860591.py:4: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  grad[0] += -2 * Xn * (yn - params[0] * Xn - params[1])\n",
-      "/tmp/ipykernel_823868/778860591.py:5: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  grad[1] += -2 * (yn - params[0] * Xn - params[1])\n"
-     ]
-    },
-    {
-     "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The optimal minibatch size is 251 and it takes 0.06029898100000253 seconds\n"
+      "The optimal minibatch size is 751 and it takes 0.019864095000002635 seconds\n"
      ]
     }
    ],
