--- a/Assignments/Assignment 2/190997.ipynb
+++ b/Assignments/Assignment 2/190997.ipynb
@@ -54,8 +54,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "First, we'll have to find the gradient of the expressions in (i) and (ii). As these are expressions in one variable, their gradients are simply there derivatives wrt. x. They can be given as follows: <br>\n",
-    "(i) $2x + 3$ <br>\n",
+    "First, we'll have to find the gradient of the expressions in (i) and (ii). As these are expressions in one variable, their gradients are simply there derivatives wrt. x. They can be given as follows:  \n",
+    "(i) $2x + 3$  \n",
     "(ii) $4x^3 - 6x + 2$"
    ],
    "metadata": {}
@@ -76,9 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "source": [
-    "min_x1 = gradient_descent(gradient=lambda x: 2 * x + 3, init_=0.0, learn_rate=0.2)\n",
+    "min_x1 = gradient_descent(gradient=lambda x: 2 * x + 3, init_=0.0, learn_rate=0.1)\n",
     "print('Point of minima:', min_x1)\n",
     "min_y1 = min_x1 ** 2 + 3 * min_x1 + 4\n",
     "print('Minima:', min_y1)"
@@ -104,9 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 140,
    "source": [
-    "min_x2 = gradient_descent(gradient=lambda x: 4 * (x ** 3) - 6 * x + 2, init_=0.0, learn_rate=0.2)\n",
+    "min_x2 = gradient_descent(gradient=lambda x: 4 * (x ** 3) - 6 * x + 2, init_=0.0, learn_rate=0.1)\n",
     "print('Point of minima:', min_x2)\n",
     "min_y2 = min_x2 ** 4 - 3 * (min_x2 ** 2) + 2 * min_x2\n",
     "print('Minima:', min_y2)"
@@ -116,8 +116,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Point of minima: 0.084\n",
-      "Minima: 0.146881787136\n"
+      "Point of minima: -1.366\n",
+      "Minima: -4.848076206064\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
     "and $$ P(\\overline{L}) = 1 - P(L) = 1 - 0.02098 = 0.97902 $$\n",
     "Hence, $$ P(X | C) = 0.7525 \\times 0.02098 + 0.505 \\times 0.97902 = 0.51019255 $$\n",
     "Now, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L \\cap C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L \\cap \\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L} \\cap C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L} \\cap \\overline{C}) $$\n",
-    "Again, since L and C are independent, $P(L \\cap C) = P(L) P(C)$,  $P(L \\cap \\overline{C}) = P(L) P(\\overline{C})$, $P(\\overline{L} \\cap C) = P(\\overline{L}) P(C)$ and $P(\\overline{L} \\cap \\overline{C}) = P(\\overline{L}) P(\\overline{C})$ <br>\n",
+    "Again, since L and C are independent, $P(L \\cap C) = P(L) P(C)$,  $P(L \\cap \\overline{C}) = P(L) P(\\overline{C})$, $P(\\overline{L} \\cap C) = P(\\overline{L}) P(C)$ and $P(\\overline{L} \\cap \\overline{C}) = P(\\overline{L}) P(\\overline{C})$  \n",
     "Hence, $$ P(X) = P \\bigl(X | (L \\cap C) \\bigr) P(L) P(C) + P \\bigl(X | (L \\cap \\overline{C}) \\bigr) P(L) P(\\overline{C}) + P \\bigl(X | (\\overline{L} \\cap C) \\bigr) P(\\overline{L}) P(C) + P \\bigl(X | (\\overline{L} \\cap \\overline{C}) \\bigr) P(\\overline{L}) P(\\overline{C}) $$\n",
     "$$ = 0.7525 \\times 0.02098 \\times 0.02 + 0.505 \\times 0.02098 \\times 0.98 + 0.505 \\times 0.97902 \\times 0.02 + 0.01 \\times 0.97902 \\times 0.98 = 0.030181249 $$\n",
     "Hence, $$ P(C | X) = \\frac{0.51019255 \\times 0.02}{0.030181249} = 0.33808577637 $$"
@@ -511,7 +511,49 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Suppose there are $k$ categories. Let us do $n$ independent trials, such that each trial leads to the success of exactly one of the $k$ categories. Let $p_i$ be the probability of success and $X_i$ be the number of successes of category $i$ for $i = 1, \\ldots, k$.  \n",
+    "Then, the likelihood of the k-sided multinomial distribution with parameters n and $p_i$ for $i = 1, \\ldots, k$ is:\n",
+    "$$ f(\\textbf{x}; n, \\textbf{p}) = f(x_1, \\ldots, x_k; n, p_1, \\ldots, p_k) = n! \\prod_{i = 1}^k \\frac{p_i^{x_i}}{x_i!} $$\n",
+    "where $\\sum_{i = 1}^{k} x_i = n$ and $\\sum_{i = 1}^{k} p_i = 1$. \n",
+    "\n",
+    "We will write $f(\\textbf{x}; n, \\textbf{p})$ as $f(\\textbf{p})$ for brevity. \n",
+    " \n",
+    "Now, the log-likelihood will be:\n",
+    "$$ LL(\\textbf{p}) = \\log f(\\textbf{p}) = \\log \\left( n! \\prod_{i = 1}^k \\frac{p_i^{x_i}}{x_i!} \\right) $$\n",
+    "$$ = \\log n! + \\log \\prod_{i = 1}^k \\frac{p_i^{x_i}}{x_i!} $$\n",
+    "$$ = \\log n! + \\sum_{i = 1}^k \\log \\frac{p_i^{x_i}}{x_i!} $$\n",
+    "$$ = \\log n! + \\sum_{i = 1}^k x_i \\log p_i - \\sum_{i = 1}^k \\log x_i! $$\n",
+    "\n",
+    "We need to maximize $LL(\\textbf{p})$ with the constraint $\\sum_{i = 1}^{k} p_i = 1$. \n",
+    "\n",
+    "Hence, we can define the lagrangian as:\n",
+    "$$ l(\\textbf{p}, \\lambda) = LL(\\textbf{p}) + \\lambda \\left( 1 - \\sum_{i = 1}^k p_i \\right) $$\n",
+    "where $\\lambda$ is the lagrange multiplier. \n",
+    "\n",
+    "Now, to find $\\argmax_{\\textbf{p}} l(\\textbf{p}, \\lambda)$, \n",
+    "$$ \\frac{\\partial}{\\partial p_i} l(\\textbf{p}, \\lambda) = 0 $$\n",
+    "for $i = 1, \\ldots, k$\n",
+    "\n",
+    "$$ \\frac{\\partial}{\\partial p_i} l(\\textbf{p}, \\lambda) = \\frac{\\partial}{\\partial p_i} LL(\\textbf{p}) + \\frac{\\partial}{\\partial p_i} \\lambda \\left( 1 - \\sum_{i = 1}^k p_i \\right) $$\n",
+    "$$ = \\frac{\\partial}{\\partial p_i} \\sum_{i = 1}^k x_i \\log p_i - \\lambda \\frac{\\partial}{\\partial p_i} \\sum_{i = 1}^k p_i $$\n",
+    "$$ = \\frac{x_i}{p_i} - \\lambda $$\n",
+    "\n",
+    "Since, $\\frac{\\partial}{\\partial p_i} l(\\textbf{p}, \\lambda) = 0$, \n",
+    "$$ \\frac{x_i}{p_i} - \\lambda = 0 $$\n",
+    "$$ \\Rightarrow p_i = \\frac{x_i}{\\lambda} $$\n",
+    "\n",
+    "Now, since $\\sum_{i = 1}^{k} p_i = 1$, \n",
+    "$$ \\sum_{i = 1}^{k} \\frac{x_i}{\\lambda} = 1 $$\n",
+    "$$ \\Rightarrow \\lambda = \\sum_{i = 1}^{k} x_i = n $$\n",
+    "\n",
+    "Hence, \n",
+    "$$ p_i = \\frac{x_i}{n} $$\n",
+    "\n",
+    "In other words, \n",
+    "$$ \\textbf{p} = \\left( \\frac{x_1}{n}, \\ldots, \\frac{x_k}{n} \\right) $$\n",
+    "is the MLE for the parameters of a k-sided multinomial distribution. "
+   ],
    "metadata": {}
   }
  ],
